--- a/src/app/components/filmes/filmes/filmes.component.html
+++ b/src/app/components/filmes/filmes/filmes.component.html
@@ -1,24 +1,24 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Filmes</span>
-    <div>
-      <button
-        mat-icon-button
-        [matMenuTriggerFor]="menu"
-        aria-label="Example icon-button with a menu"
-      >
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <span  [routerLink]="['/home']">Home</span>
-        </button>
-        <button mat-menu-item>
-          <span [routerLink]="['/filmes']">Filmes</span>
-        </button>
-        <button mat-menu-item>
-          <span [routerLink]="['/naves']">Naves</span>
-        </button>
-      </mat-menu>
-    </div>
-  </mat-toolbar-row>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="episode_id">
+    <th mat-header-cell *matHeaderCellDef>episode</th>
+    <td mat-cell *matCellDef="let element">{{ element.episode_id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef>title</th>
+    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="director">
+    <th mat-header-cell *matHeaderCellDef>director</th>
+    <td mat-cell *matCellDef="let element">{{ element.director }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="producer">
+    <th mat-header-cell *matHeaderCellDef>director</th>
+    <td mat-cell *matCellDef="let element">{{ element.producer }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
